--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>ViewTube</title>
+    <title>PlayTube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
